--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 
 sentence-transformers==2.2.2
-faiss-cpu==1.9.0
+faiss-cpu>=1.13.1
 
 pandas==2.1.3
 numpy==1.24.3
