--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-
-sentence-transformers==2.2.2
-faiss-cpu>=1.13.1
-
-pandas==2.1.3
+pandas==2.1.4
 numpy==1.24.3
-openpyxl==3.1.2
-
+scikit-learn==1.3.2
+faiss-cpu>=1.13.1
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
 google-generativeai==0.3.0
-streamlit==1.28.1
 requests==2.31.0
+python-dotenv==1.0.0
