--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+# COMPATIBLE WITH PYTHON 3.11
 pandas==2.1.4
 numpy==1.24.3
 scikit-learn==1.3.2
 faiss-cpu>=1.13.1
+
+# FastAPI
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+
+# Gemini
 google-generativeai==0.3.0
+
+# Data
+openpyxl==3.1.2
+
+# Utilities
 requests==2.31.0
 python-dotenv==1.0.0
+streamlit==1.28.1
