--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,13 @@ services:
   - type: web
     name: shl-assessment-api
     env: python
+    runtime: python-3.11.0
+    region: oregon  # More stable region
     buildCommand: |
-      pip install --upgrade pip
+      python -m pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
-    pythonVersion: "3.11.0"
+    plan: free
