--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Use a pandas release compatible with the Python version on the build host.
 # Allow pip to choose a compatible pandas wheel to avoid compiling from source.
 pandas>=2.2.3
-numpy==1.24.3
+numpy~=1.24.0
 scikit-learn==1.3.2
 faiss-cpu>=1.13.1
 fastapi==0.104.1
