--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# SHL Assessment System - Render-Compatible
-pandas==2.1.4
-numpy>=1.25.0
-scikit-learn==1.3.2
-faiss-cpu>=1.13.1
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+scikit-learn==1.3.2
+faiss-cpu==1.7.4
+pandas==1.5.3
+numpy==1.24.3
 google-generativeai==0.3.0
 requests==2.31.0
 openpyxl==3.1.2
